scrollbar bug fixed

--- a/js/packages/web/src/styles/style.less
+++ b/js/packages/web/src/styles/style.less
@@ -183,6 +183,21 @@ h5 {
     font-size: 32px !important;
 }
 
+.hide-scrollbar {
+    overflow: hidden !important;
+    width: 100vw !important;
+    height: 100vh !important;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none !important;
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none !important;
+    scrollbar-width: none !important;
+}
+
 
 /* font style end */
 
